{console.log('TIMEOUT')
[eval]:1
const http=require('http');http.get('http://localhost:3000/admin',r=,r.statusCode);process.exit(r.statusCode===200?0:1)});setTimeout(()=;process.exit(1)},5000)
                                                                    ^

SyntaxError: Unexpected token ','
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2

